# EL_dip24_Tasks

./: README.md  Vowels.py  acc_envi_variables.py  calc_circle_area.py  test.py
Alexa_project/: Alexa_Prototype.py  README.md  alexa_features.py
Cpp_tasks/: MyInt.cpp  MyString  MyString.cpp  README.md  String.cpp  a  a.out  address_book.cpp  algorithms.cpp  algroithms.cpp  algrothims.cpp  diff_NULL_nullptr  diff_NULL_nullptr.cpp  fileHandling.cpp  inheritance.cpp  interface_class.cpp  move_constructor.cpp  operations_on_arr.cpp  polymorphizm.cpp  smart_ptr.cpp  stl.cpp  templates.cpp  test.txt  threading.cpp
Cpp_tasks/Copy_Constructor/: Deep_Copy  Deep_Copy.cpp  Shallow_Copy.cpp  a  a.out
Cpp_tasks/cmake_test/: CMakeLists.txt  defaultConfig.h.in  main.cpp
Cpp_tasks/cmake_test/lib/: CMakeLists.txt
Cpp_tasks/cmake_test/src/: calc.cpp
access_env_Variables/: acc_envi_variables.py
cmake_test/: CMakeLists.txt  defaultConfig.h.in  main.cpp
cmake_test/include/: calc.hpp
cmake_test/lib/: base.cpp  base.hpp
count_in_List/: count.py
python_tasks/: BS_chatGpt.py  Calender.py  README.md  count.py  get_Ur_ip.py  get_char_ASCII.py  get_terminal_args.py  pip_packages.txt  tkinterSample.py
python_tasks/employees_dataBase/: employees_DB.py
python_tasks/extract_funPrototype_Cfile/: C_Header_File.h  funPrototype_from_Cfile.py  function_prototypes.xlsx
python_tasks/file_handling/: append_list_toFile.py  count_file_lines.py  count_file_words.py  myFile.txt
python_tasks/pyauto_task/: pyauto_task.py
vowelLetter/: Vowels.py
